--- a/DesafioConcrete/DesafioConcrete.API/Views/Shared/_Layout.cshtml
+++ b/DesafioConcrete/DesafioConcrete.API/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
     @RenderSection("head", required: false)
 </head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -23,7 +23,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    
+                    <li>@Html.ActionLink("Documentação", "Index", "Swagger", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
